# napari-segment-anything

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  main.py  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_segment_anything/: __init__.py  _widget.py  napari.yaml  utils.py
src/napari_segment_anything/_tests/: test_widget.py
