[metadata]
name = napari-segment-anything
version = attr: napari_segment_anything.__version__
description = Napari plugin of Segment Anything Model (SAM)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jookuma/napari-segment-anything
author = Jordao Bragantini
author_email = jordao.bragantini@czbiohub.org
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/jookuma/napari-segment-anything/issues
    Documentation = https://github.com/jookuma/napari-segment-anything#README.md
    Source Code = https://github.com/jookuma/napari-segment-anything
    User Support = https://github.com/jookuma/napari-segment-anything/issues

[options]
packages = find:
install_requires =
    numpy
    torch
    torchvision
    segment-anything
    qtpy
    magicgui
    napari

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-segment-anything = napari_segment_anything:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    pyqt5


[options.package_data]
* = *.yaml
